# chanze

./: .gitignore  docker-compose.yml  justfile
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  task_items.py  task_templates.py
backend/app/core/: database.py  security.py
backend/app/models/: task_item.py  task_template.py  user.py
backend/app/repositories/: base.py  task_item_repository.py  task_template_repository.py  user_repository.py
backend/app/schemas/: auth.py  error.py  task_item.py  task_template.py  user.py
backend/app/services/: auth_service.py  email_service.py  task_item_service.py  task_template_service.py
backend/app/utils/: email_templates.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_endpoints.py  test_task_item_endpoints.py  test_task_template_endpoints.py
backend/tests/integration/: test_auth_flow.py  test_task_management.py
backend/tests/unit/models/: test_task_item.py  test_task_template.py  test_user.py
backend/tests/unit/repositories/: test_task_item_repository.py  test_task_template_repository.py  test_user_repository.py
backend/tests/unit/services/: test_auth_service.py  test_task_template_service.py
backend/tests/utils/: fixtures.py  helpers.py
chanze-frontend/: .env  index.html  migration_guide.md  package-lock.json  package.json  vite.config.ts
chanze-frontend/sql/: drop_tables.sql  seed_data_tasks.sql
chanze-frontend/sql/migrations/: 001_create_todos_table.sql  002_setup_rls_policies.sql  003_create_indexes.sql  004_create_task_functions.sql
chanze-frontend/src/: App.tsx  index.css  main.tsx
chanze-frontend/src/components/: AddTaskModal.tsx  Layout.tsx  index.ts  theme-toggle.tsx
chanze-frontend/src/constants/: api.ts  index.ts  routes.ts
chanze-frontend/src/hooks/: index.ts  useAuth.ts  useTodos.ts
chanze-frontend/src/lib/: supabase.ts
chanze-frontend/src/pages/: CalendarPage.tsx  DashboardPage.tsx  (+4 more)
chanze-supabase/: .env  docker-compose.yml
chanze-supabase/dev/: docker-compose.dev.yml
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/docs/: DESIGN_AND_ARCHITECTURE.md
frontend/sql/: README.md  drop_tables.sql  seed_data.sql
frontend/src/: App.tsx  index.css
scripts/: init-mongo.js
(+853 files in other folders)
