[project]
name = "chanze-backend"
version = "0.1.0"
description = "FastAPI backend for Chanze"
authors = [
    {name = "Spencer Jireh Cebrian",email = "spencercebrian123@gmail.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "fastapi (==0.104.1)",
    "uvicorn[standard] (==0.24.0)",
    "motor (==3.3.2)",
    "beanie (==1.23.6)",
    "pydantic (==2.5.0)",
    "pydantic-settings (==2.1.0)",
    "python-jose[cryptography] (==3.3.0)",
    "passlib[bcrypt] (==1.7.4)",
    "python-multipart (==0.0.6)",
    "email-validator (==2.1.0)",
    "aiosmtplib (==3.0.1)",
    "jinja2 (==3.1.2)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.25.2"

