[tool.poetry]
name = "chanze-backend"
version = "0.1.0"
description = "FastAPI backend for Chanze"
authors = ["Spencer Jireh Cebrian <spencercebrian123@gmail.com>"]
package-mode = false  # Disable package mode for dependency-only projects

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.116.0"
uvicorn = {extras = ["standard"], version = "~0.35.0"}
motor = ">=3.4.0"
beanie = "~1.29.0"
pydantic = "~2.11.0"
pydantic-settings = "~2.10.0"
python-jose = {extras = ["cryptography"], version = "~3.3.0"}
passlib = {extras = ["bcrypt"], version = "~1.7.4"}
python-multipart = "~0.0.6"
email-validator = "~2.2.0"
aiosmtplib = "~3.0.1"
jinja2 = "~3.1.2"
python-dotenv = "~1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "~7.4.3"
pytest-asyncio = "~0.21.1"
httpx = "~0.25.2"
pytest-cov = ">=3.0.0,<4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short", 
    "--strict-markers",
    "--disable-warnings",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "api: API tests",
    "slow: Slow running tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"